deployment/frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: cloudwp
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ghcr.io/haw-cloud-wp/haw-cloudwp-frontend:latest
        ports:
        - containerPort: 3000
