deployment/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: cloudwp
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
