deployment/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt
  name: app
  namespace: cloudwp
spec:
  rules:
  - host: app.cloudwp.anwski.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 3000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - app.cloudwp.anwski.de
    secretName: cloudwp-tls # < cert-manager will store the created certificate in this secret.
